--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,17 +20,27 @@ h1 {
     color: #3a3a3a
 }
 
+h2 {
+    font-family: 'EB Garamond', serif;
+    font-weight: 400;
+    color: #3a3a3a;
+    margin-left: 30px;
+    margin-top: 10px;
+    float: left;
+    position: relative;
+}
+
 #logo{
     float: left;
     font-size: 350%;
     margin-left: 30px;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 /* navigation links, menu */
 
 #menu, #logo {
-  
+    line-height: 30px;
 }
 
 #menu {
@@ -43,6 +53,7 @@ h1 {
     list-style-type: none;
     margin-right: 30px;
     margin-top: 30px;
+    margin-bottom: 30px;
     color: #3a3a3a
 }
 
@@ -54,6 +65,11 @@ h1 {
 #menu a:hover {
     background-color: #e9e3dc;
     color: #a69797;
+    border: none;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
 
 /* hero image (credit: majority of code borrowed from the Love Running Walkthrough Project)*/
@@ -70,4 +86,39 @@ h1 {
     width: 100%;
     background: url('../images/book-club-main-image.png'); /* credit: image created in Canva */
     background-size: contains;
+}
+
+#introduction-text {
+    font-family: 'EB Garamond', serif;
+
+    height: 35%;
+    width: 25%;
+
+    padding-right: 10px;
+    padding-bottom: 10px;
+
+    background-color: rgba(250, 250, 250, .6);
+
+    top: 30px;
+    
+
+    position: absolute;
+
+}
+
+#introduction-text h2 {
+    text-transform: uppercase;
+    text-align: left;
+    font-size: 135%;
+    position: inherit;
+}
+
+#introduction-text h3 {
+    position: inherit;
+    font-weight: 200;
+    top: 50px;
+    right: inherit;
+    text-align: justify;
+    left: 20px;
+    right: 15px;
 }
