--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,15 +88,15 @@ h2 {
     background-size: contains;
 }
 
+/* introduction */
+
 #introduction-text {
     font-family: 'EB Garamond', serif;
 
     height: 35%;
     width: 25%;
-
-    padding-right: 10px;
-    padding-bottom: 10px;
-
+    border-radius: 10%;
+    margin: 0 auto;
     background-color: rgba(250, 250, 250, .6);
 
     top: 30px;
@@ -121,4 +121,10 @@ h2 {
     text-align: justify;
     left: 20px;
     right: 15px;
+}
+
+/* map */
+
+#map {
+    width: 100%;
 }
