--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,6 +244,37 @@ hr {
     margin: 5px 25px;
 }
 
+/* book list */
+
+#book-list {
+  
+}
+
+#book-list div {
+    display: inline-block;
+    text-align: center;
+    background-color: rgba(181, 174, 174, 0.2);
+    width: 20%;
+    height: 400px;
+    float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+    border-radius: 5%;
+    margin: 5% 0 5% 0;
+    background-size: cover;
+}
+
+#book-list img {
+    clear: both;
+    vertical-align: middle;
+}
+
+#book-list h2 {
+    color
+}
+
 /* map */
 
 #map {
