--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,15 +26,15 @@ a:hover {
 h1 {
     font-family: 'Tangerine', cursive;
     letter-spacing: 1px;
-    color: #3a3a3a
+    color: #fafafa;
 }
 
 h2 {
     font-family: 'EB Garamond', serif;
     font-weight: 400;
-    color: #3a3a3a;
+    color: #fafafa;
     margin-left: 30px;
-    margin-top: 10px;
+    margin-top: 10px;  
     float: left;
     position: relative;
 }
@@ -49,7 +49,7 @@ h2 {
 /* navigation links, menu */
 
 #menu, #logo {
-    line-height: 30px;
+   line-height: 20px;
 }
 
 #menu {
@@ -63,218 +63,70 @@ h2 {
     margin-right: 30px;
     margin-top: 30px;
     margin-bottom: 30px;
-    color: #3a3a3a
+    color: #fafafa;
 }
 
 #menu a {
     text-decoration: none;
-    color: #3a3a3a;
+    color: #fafafa;
 }
 
 #menu a:hover {
-    background-color: #e9e3dc;
-    color: #a69797;
+    background-color: #fafafa;
+    color: #3a3a3a;
     border: none;
 }
 
 .active {
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #fafafa;
 }
 
-/* hero image (credit: majority of code borrowed from the Love Running Walkthrough Project)*/
+/* main image */
 
-#hero-outer {
-    height: 600px;
+#main-outer {
+    height: 700px;
     width: 100%;
     overflow: hidden;
     position: relative;
 }
 
-#hero-image {
-    height: 500px;
+#main-image {
+    height: 100%;
     width: 100%;
-    background: url('../images/book-club-main-image.png'); /* credit: image created in Canva */
-    background-size: contains;
+    background: url('../images/main-image.webp');
+    background-size: contain;
 }
 
-/* introduction */
-
-#left {
-    padding-top: 30px;
-    width: 30%;
-    float: left;
-}
-
-#left-container{
-    height: 73.5%;
-    width: 25%;
-    border-radius: 5%;
-    background-color: rgba(250, 250, 250, .6);
-    float: left;
-    top: 30px;
-    margin-left: 65px;
-    position: absolute;
-}
-
-.introduction-text-left h2 {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 135%;;
-    margin: 15px;
-    padding-left: 11%;
-    clear: both;
-    position: relative;
-}
-
-.introduction-text-left h3 {
-    position: inherit;
-    font-weight: 200;
-    top: 50px;
-    text-align: justify;
-    left: 20px;
-    right: 15px;
-    clear: both;
-    margin: 15px;
-}
-
-#right {
-    padding-top: 30px;
-    width: 30%;
-    float: right;
-}
-
-#right-container {
-    height: 73.5%;
-    width: 25%;
-    border-radius: 5%;
-    background-color: rgba(250, 250, 250, .6);
-    float: right;
-    top: 30px;
-    margin-right: 75px;
-    position: absolute;
-}
-
-.introduction-text-right h2 {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 135%;;
-    margin: 15px;
-    padding-left: 11%;
-    clear: both;
-    position: relative;
-}
-
-.introduction-text-right h3 {
-    position: inherit;
-    font-weight: 200;
-    top: 50px;
-    text-align: justify;
-    left: 20px;
-    right: 15px;
-    clear: both;
-    margin: 15px;
-}
-
-#center {
-    padding-top: 30px;
-    width: 30%;
-    margin: 0 auto;
-}
-
-#center-container {
-    height: 73.5%;
-    width: 25%;
-    border-radius: 5%;
-    background-color: rgba(250, 250, 250, .6);
-    left: 37%;
-    top: 30px;
-    position: absolute;
-}
-
-.introduction-text-center {
+#quote {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 130%;
     font-family: 'EB Garamond', serif;
 
-}
+    width: 25%;
+    height: 10%;
 
-.introduction-text-center h2 {
-    text-transform: uppercase;
     text-align: center;
-    font-size: 135%;;
-    margin: 15px;
-    padding-left: 11%;
-    clear: both;
-    position: relative;
-}
+    left: 35%;
+    bottom: 60%;
 
-.introduction-text-center h3 {
-    position: inherit;
-    font-weight: 200;
-    top: 50px;
-    text-align: justify;
-    left: 20px;
-    right: 15px;
-    clear: both;
-    margin: 15px;
-}
-
-.introduction-text-center li {
-    font-family: 'EB Garamond', serif;
-    position: inherit;
-    font-weight: 200;
-    font-size: 19px;
-    top: 50px;
-    text-align: justify;
-    left: 20px;
-    right: 15px;
-    clear: both;
-    margin: 15px;
-    list-style-type: none;
-}
-
-li > hr {
-    border-top: 1px solid #3a3a3a;
-    width: 55%;
-    margin: 18px 0 15px 0;
+    color: #fafafa;
     
+    position: absolute;
 }
 
-hr {
-    border-top: 1px solid #3a3a3a;
-    width: 85%;
-    margin: 5px 25px;
+#quote h1 {
+    color: #fafafa;
 }
 
-/* book list */
-
-#book-list {
-  
+#quote p {
+    color: #fafafa;
 }
 
-#book-list div {
-    display: inline-block;
-    text-align: center;
-    background-color: rgba(181, 174, 174, 0.2);
-    width: 20%;
-    height: 400px;
-    float: left;
-    padding: 30px 0 0 10px;
-    text-align: center;
-    border: 2px solid white;
-    box-sizing: border-box;
-    border-radius: 5%;
-    margin: 5% 0 5% 0;
-    background-size: cover;
+#quote h3 {
+    color: #fafafa;
 }
-
-#book-list img {
-    clear: both;
-    vertical-align: middle;
-}
-
-#book-list h2 {
-    color
-}
-
 /* map */
 
 #map {
