Add table and formatting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,8 @@ h2 {
     background-size: contain;
 }
 
+/* quote section */
+
 #quote {
     display: flex;
     align-items: center;
@@ -109,7 +111,7 @@ h2 {
     height: 10%;
 
     text-align: center;
-    margin-top: 15px;
+    margin-top: 30px;
     left: 35%;
     bottom: 60%;
 
@@ -131,6 +133,52 @@ h2 {
     font-size: 105%;
     margin-top: 10px;
 }
+
+/* book descriptions and times */
+
+#books{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+    background: url('../images/books-section-background.jpeg')
+}
+
+table, tr, td {
+
+}
+
+tr, th, td {
+    padding: 25px;
+}
+
+table {
+    float: left;
+    height: 600px;
+    width: 60%;
+    text-align: justify;
+    margin: 20px;
+    border-bottom: 10px;
+    background-color: rgb(252, 252, 252, 0.8)
+    
+}
+
+tr {
+    height: 35px;
+    color: #3a3a3a;
+    font-size: 125%;
+    background-color: rgb(252, 252, 252, 0.8)
+}
+
+td {
+    max-width: 200px;
+}
+
+
+
+
+
 /* map */
 
 #map {
