--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ h2 {
 }
 
 #quote h1 {
-    color:#3a3a3a;
+    color:#8d2b00;
 }
 
 #quote p {
@@ -138,7 +138,13 @@ h2 {
 
 #upcoming-reads {
     text-transform: uppercase;
-    padding-top: 20px; 
+    padding: 20px;
+    width: 100%;
+    background-color: rgba(141, 43, 0, 0.8);
+}
+
+#upcoming-reads h2 {
+    color: #fafafa;
 }
 
 #books{
@@ -194,6 +200,30 @@ tr {
 #calendar-button a:hover {
     color: #fafafa;
     background-color: #8d2b00;
+}
+
+/* social links */
+
+footer {
+    height: fit-content;
+}
+
+.social {
+    text-align: center;
+    margin: 25px;
+    list-style-type: none;
+}
+
+.social > li {
+    display: inline;
+}
+
+
+.social a{
+    color:#8d2b00;
+    margin: 1%;
+    padding: 1%;
+    font-size: 150%;
 }
 /* map */
 
