--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,18 +136,18 @@ h2 {
 
 /* book descriptions and times */
 
-#upcoming-reads {
+.upcoming-reads {
     text-transform: uppercase;
     padding: 20px;
     width: 100%;
     background-color: rgba(141, 43, 0, 0.8);
 }
 
-#upcoming-reads h2 {
+.upcoming-reads h2 {
     color: #fafafa;
 }
 
-#books{
+#home-table-books {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -156,6 +156,7 @@ h2 {
     width: 100%;
     height: fit-content;
     background: url('../images/book-list-background.jpeg') no-repeat;
+    overflow: hidden;
     background-size: cover;
     background-position: bottom;
 }
@@ -164,7 +165,7 @@ tr, th, td {
     padding: 25px;
 }
 
-table {
+#home-table {
     float: left;
     height: 600px;
     width: 60%;
@@ -235,4 +236,60 @@ footer {
 
 #map {
     width: 100%;
+}
+
+#time-and-place > div {
+    margin-top: 30px;
+    text-transform: uppercase;
+    width: 100%;
+    background-color: rgba(141, 43, 0, 0.8);
+}
+
+#meetups-info {
+    text-transform: uppercase;
+    padding: 20px;
+    width: 100%;
+    height: 30px;
+    background-color: rgba(141, 43, 0, 0.8);
+}
+
+#meetups-info h2 {
+    color: #fafafa;
+}
+
+/* Books - Calendar page */
+
+#calendar-table-books {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    width: 100%;
+    height: fit-content;
+    background: url('../images/book-list-background.jpeg') no-repeat;
+    overflow: hidden;
+    background-size: cover;
+    background-position: bottom;
+}
+
+#calendar-table tr, th, td {
+    padding: 25px;
+}
+
+#calendar-table {
+    float: left;
+    height: 600px;
+    width: 90%;
+    text-align: justify;
+    margin: 20px;
+    border-radius: 4%;
+}
+
+#calendar-table tr {
+    height: 35px;
+    color: #3a3a3a;
+    font-size: 135%;
+    background-color: rgba(252, 252, 252, 0.8);
+    
 }
