--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ footer {
 }
 
 #time-and-place > div {
-    margin-top: 30px;
+    margin-top: 25px;
     text-transform: uppercase;
     width: 100%;
     background-color: rgba(141, 43, 0, 0.8);
@@ -247,10 +247,12 @@ footer {
 
 #meetups-info {
     text-transform: uppercase;
-    padding: 20px;
-    width: 100%;
-    height: 30px;
+    width: fit-content;
+    height: 40px;
     background-color: rgba(141, 43, 0, 0.8);
+    overflow: hidden;
+    padding-top: 20px;
+    padding-bottom: 25px;
 }
 
 #meetups-info h2 {
