--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,27 +238,6 @@ footer {
     width: 100%;
 }
 
-#time-and-place > div {
-    margin-top: 25px;
-    text-transform: uppercase;
-    width: 100%;
-    background-color: rgba(141, 43, 0, 0.8);
-}
-
-#meetups-info {
-    text-transform: uppercase;
-    width: fit-content;
-    height: 40px;
-    background-color: rgba(141, 43, 0, 0.8);
-    overflow: hidden;
-    padding-top: 20px;
-    padding-bottom: 25px;
-}
-
-#meetups-info h2 {
-    color: #fafafa;
-}
-
 /* Books - Calendar page */
 
 #calendar-table-books {
@@ -266,7 +245,8 @@ footer {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 8px;
+    margin-bottom: 60px;
     width: 100%;
     height: fit-content;
     background: url('../images/book-list-background.jpeg') no-repeat;
