--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,10 @@ tr, th, td {
     border-radius: 4%;
 }
 
+#home-table hr {
+    margin: 0;
+}
+
 tr {
     height: 35px;
     color: #3a3a3a;
@@ -272,6 +276,14 @@ footer {
     font-size: 135%;
     background-color: rgba(252, 252, 252, 0.8);
     
+}
+
+#calendar-table td {
+    text-align: left;
+}
+
+#hide {
+    display: none;
 }
 
 /* info (meetup + joining) */
@@ -391,28 +403,102 @@ hr {
 
 /* media queries - influenced by the Walkthrough Project as well */
 
-/* for larger and medium screen size from 1200px wide and down */
+/* for larger and medium screen size from 1100px wide and down */
+@media screen and (max-width: 1100px){
+    .to-hide {
+        display: none;
+    }
+
+    #calendar-table {
+        justify-content: center;
+    }
+}
 
 /* 685px and below */
 @media screen and (max-width: 800px) {
-    #calendar-table {
-        
+    
+    #calendar-table-books {
+        background: none;
     }
+
+    #calendar-table {
+        display: none;       
+    }
+
+
+   #hide {
+        display: flex;
+        flex-direction: column;
+        margin: 17px;
+
+        color: #3a3a3a;
+   }
+
+   #hide hr {
+        margin: 0;
+   }
+
+   #hide ul {
+        list-style-type: none;
+   }
+
+   #hide a {
+        text-decoration: none;
+   }
+
+
+   #hide a:hover {
+        color: #8d2b00;
+   }
 
     #info {
         flex-direction: column;
     }
 
     #menu {
+        display: flex;
+        flex-direction: column-reverse;
         clear: right;
         float: right;
-        margin-left: 30px;
-        margin-bottom: 20px;
-        line-height: 25px;
+        font-size: 90%;
+        margin-top: 25px;
+        margin-right: 15px;
+    }
+
+    #menu li {
+        margin: 5px;
+    }
+
+    #menu a {
+        background-color: #fafafa;
+    }
+
+    #menu a:hover {
+        background-color: #8d2b00;
+        color: #fafafa;
+        border: none;
+    }
+
+    .active {
+        border-bottom: 2px solid #8d2b00;
     }
 
     .meetup-info, .join-info {
         font-size: 80%;
+    }
+
+    #quote {
+        font-size: 93%;
+        width: 40%;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0;
+        margin-right: 0;
+        left: 30%;
+    }
+
+    .signup-form {
+        margin: 0 auto;
     }
 
 
